Fix alignment of checkbox/radio items

--- a/src/sass/elements/_inputs.scss
+++ b/src/sass/elements/_inputs.scss
@@ -31,7 +31,8 @@ textarea {
 	border-radius: $radius;
 	box-shadow: none;
 	color: inherit;
-	font: inherit;
+	font-family: inherit;
+	font-size: inherit;
 	outline: none;
 	width: 100%;
 
@@ -94,13 +95,13 @@ textarea {
 // Checkboxes and Radios
 //
 // Markup:
-// <label>
-//   <input type="checkbox" name="checkbox"/>
-//   Tick me!
+// <label class="xui-checkbox">
+//  <input type="checkbox" name="checkbox"/>
+//  Tick me!
 // </label>
-// <label>
-//   <input type="radio" name="radio"/>
-//   Pick me!
+// <label class="xui-radio">
+//  <input type="radio" name="radio"/>
+//  Pick me!
 // </label>
 //
 // Styleguide: Inputs.3
@@ -110,9 +111,6 @@ input[type="radio"] {
 	box-shadow: none;
 	cursor: pointer;
 	height: px-to-rem(18);
-	margin-right: 0.5em;
-	position: relative;
-	top: px-to-rem(4);
-	vertical-align: top;
+	margin: 3px 0.5em 3px 3px;
 	width: px-to-rem(18);
 }
