--- a/src/sass/objects/_checkboxradiogroup.scss
+++ b/src/sass/objects/_checkboxradiogroup.scss
@@ -5,6 +5,44 @@
 @import "../settings/structure";
 @import "../tools/mixins";
 
+// Checkbox and Radio groups
+//
+// A collection of checkbox/radio items within a single container, grouped as
+// such so that on mobile, their appearance resembles that of a
+// single-column table to be fat-finger friendly.
+//
+// Markup:
+// <div class="xui-checkboxgroup">
+//   <label class="xui-checkbox">
+//     <input type="checkbox" name="checkbox1"/>
+//     Tick me!
+//   </label>
+//   <label class="xui-checkbox">
+//     <input type="checkbox" name="checkbox2"/>
+//     No, tick me!
+//   </label>
+//   <label class="xui-checkbox">
+//     <input type="checkbox" name="checkbox3"/>
+//     Don't listen to those 2 - tick me instead!
+//   </label>
+// </div>
+// <div class="xui-radiogroup">
+//   <label class="xui-radio">
+//     <input type="radio" name="radio"/>
+//     Pick me!
+//   </label>
+//   <label class="xui-radio">
+//     <input type="radio" name="radio"/>
+//     No, pick me!
+//   </label>
+//   <label class="xui-radio">
+//     <input type="radio" name="radio"/>
+//     Are you insane?  Pick me!
+//   </label>
+// </div>
+//
+// Styleguide: Checkbox_Radio groups
+
 .#{$ns}-checkboxgroup,
 .#{$ns}-radiogroup {
 	@include mobile {
@@ -13,9 +51,7 @@
 	}
 }
 
-.#{$ns}-checkboxgroup--checkbox,
-.#{$ns}-radiogroup--radio {
-	display: block;
-	padding-left: calc(22px + 0.5em);
-	text-indent: calc(-22px - 0.5em);
+.#{$ns}-checkbox,
+.#{$ns}-radio {
+	display: flex;
 }
